WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213423
[Apple Pay] WebPaymentCoordinatorProxy can be destroyed without dismissing its authorization presenter
https://bugs.webkit.org/show_bug.cgi?id=213423
Summary
[Apple Pay] WebPaymentCoordinatorProxy can be destroyed without dismissing it...
Andy Estes
Reported
2020-06-19 19:14:21 PDT
Comment hidden (obsolete)
[Apple Pay] hiWebPaymentCoordinatorProxy can be destroyed without dismissing its authorization presenter
Attachments
Patch
(23.45 KB, patch)
2020-06-20 10:26 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(23.17 KB, patch)
2020-06-20 10:44 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(24.01 KB, patch)
2020-06-20 10:55 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(23.98 KB, patch)
2020-06-23 15:24 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2020-06-19 19:16:29 PDT
rdar://problem/60416221
Andy Estes
Comment 2
2020-06-20 10:26:44 PDT
Comment hidden (obsolete)
Created
attachment 402385
[details]
Patch
Andy Estes
Comment 3
2020-06-20 10:44:55 PDT
Comment hidden (obsolete)
Created
attachment 402389
[details]
Patch
Andy Estes
Comment 4
2020-06-20 10:55:04 PDT
Created
attachment 402392
[details]
Patch
youenn fablet
Comment 5
2020-06-23 06:32:33 PDT
Comment on
attachment 402392
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=402392&action=review
> Source/WebKit/Shared/ApplePay/WebPaymentCoordinatorProxy.cpp:318 > + send(Messages::WebPaymentCoordinator::DidCancelPaymentSession(WTFMove(error)));
No need for WTFMove, DidCancelPaymentSession is probably taking a const&
Andy Estes
Comment 6
2020-06-23 15:24:46 PDT
Created
attachment 402597
[details]
Patch
EWS
Comment 7
2020-06-23 15:47:59 PDT
Committed
r263426
: <
https://trac.webkit.org/changeset/263426
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402597
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug